# logger_inspection

./: .gitignore  README.md  main.py  pyproject.toml
config/: logger_conf.json  logger_conf.yaml
lib/: commons.py  sub.py
